bdr.BDR.scala.error
Compilation error:
BDR:5: error: object java.lang.String is not a value
  String
  ^